Fixed missing env var
Signed-off-by: Nikola Marcetic <n.marcetic86@gmail.com>

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -6,6 +6,7 @@ APP_ENV=prod
 APP_VERSION=prod
 NETWORK=mainnet
 LOG_LEVEL="info"
+PASSPHRASE=""
 
 
 # Injective image tag, options are latest, local, prod
@@ -61,14 +62,6 @@ INJ_EXCHANGE_GATEWAY_HTTP_GATEWAY_LISTEN_PORT=8810
 INJ_EXCHANGE_GATEWAY_GRPC_PORT_EXPOSED=9911
 INJ_EXCHANGE_GATEWAY_GRPC_PORT=9910
 
+# INJ Peggo 
 
-
-### Injective Trading Bot ###
-INJ_TRADING_BOT_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-trading-bot
-
-### Injective Liquidator Bot ###
-INJ_LIQUIDATOR_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-liquidator-bot
-
-### Injective Price Oracle env ####
-
-INJ_PRICE_ORACLE_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-price-oracle
+INJ_ADDR=""
