Aligned scripts and guides with latest mainnet upgrade
Signed-off-by: Nikola Marcetic <n.marcetic86@gmail.com>

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,11 @@
-# File contains docker secific environment varialbes ### Network Env ###
+# File contains docker secific environment varialbes, users should edit only ones in
+# User Configurable section.
+# Each service contains required and optional varialbes, please make sure you populate all required.
 
+#####################
+### User Configurable ###
+
+# Network Env #
 MONIKER=injective
 CHAIN_ID=injective-1
 APP_ENV=prod
@@ -8,52 +14,64 @@ NETWORK=mainnet
 LOG_LEVEL="info"
 PASSPHRASE=""
 
-
 # Injective image tag, options are latest, local, prod
 INJ_IMAGE_TAG=prod
 
-# Ports
-INJ_NETWORK_P2P_PORT=26656
-INJ_NETWORK_GRPC_PORT=26657
-INJ_NETWORK_COSMOS_GRPC_PORT=9900
-INJ_NETWORK_COSMOS_GRPC_WEB_PORT=9091
-INJ_NETWORK_COSMOS_API_PORT=10337
-
-### Injective Mongo env ###
-
-INJ_MONGO_DB_IMAGE_TAG=5.0.3
-INJ_MONGO_DB_PORT=27017
-
-### Injective Core env ###
-INJ_CORE_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-core
+# Injective Core env #
+# Optional
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=8G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=4G
 
 
-### Injective Exchange Process ###
+# Injective Exchange Process #
+# Optional
 ALCHEMY_ENDPOINT=
-INJ_EXCHANGE_PROCESS_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-exchange
-INJ_EXCHANGE_PROCESS_COMMAND=injective-exchange process
-
+INJ_EXHCHANGE_PROCESS_LOG_BUGSNAG_ENABLED="false"
+INJ_EXHCHANGE_PROCESS_LOG_BUGSNAG_KEY=
+INJ_EXCHANGE_PROCESS_STATSD_DISABLED="true"
+INJ_EXCHANGE_PROCESS_STATSD_ADDR=""
 # Resource limits works only with swarm mode
 INJ_EXCHANGE_PROCESS_RESOURCE_RAM_LIMIT=4G
 INJ_EXCHANGE_PROCESS_RESOURCE_RAM_RESERVATION=4G
 INJ_EXCHANGE_PROCESS_CHRONOS_RPC_PORT=5500
 
-### Injective Exchange API ###
+# Injective Exchange API #
 
-INJ_EXCHANGE_API_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-exchange
-INJ_EXCHANGE_API_COMMAND=injective-exchange api
-INJ_EXCHANGE_API_CHRONOS_PORT=4444
-INJ_EXCHANGE_GRPC_LISTEN_PORT=9910
+## Required #
+INJ_EXCHANGE_API_FEE_PAYER_PK=""
 
+# Optional #
+INJ_EXCHANGE_API_STATSD_DISABLED="true"
+INJ_EXCHANGE_API_STATSD_ADDR=""
 # Resource limits works only with swarm mode
 INJ_EXCHANGE_API_RESOURCE_RAM_LIMIT=4G
 INJ_EXCHANGE_API_RESOURCE_RAM_RESERVED=4G
 
-### Injective Exchange Gateway ####
+# Injevtive Exchange Gateway
 
+# Optional #
+INJ_EXCHANGE_GATEWAY_LOG_BUGSNAG_ENABLED="false"
+INJ_EXCHANGE_GATEWAY_EXCHANGE_STATSD_DISABLE="true"
+INJ_EXCHNAGE_GATEWAY_EXCHANGE_STATSD_ADDR=""
+
+# INJ Peggo 
+# Required
+INJ_PEGGO_PEGGY_ETH_PRIVATE_KEY=""
+INJ_PEGGY_COSMOS_PRIVKEY=""
+INJ_PEGGY_CONTRACT_ADDRESS=""
+INJ_CONTRACT_ADDRESS=""
+
+# Optional
+INJ_ADDR=""
+INJ_PEGGO_STATSD_DISABLED="true"
+INJ_PEGGO_STATSD_ADDR=""
+
+
+#############################
+### DO NOT EDIT FROM HERE ####
+
+### Injective Exchange Gateway ####
 INJ_EXCHANGE_GATEWAY_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-exchange
 INJ_EXCHANGE_GATEWAY_COMMAND=injective-exchange web3-gateway
 INJ_EXCHANGE_GATEWAY_CHRONOS_PORT=4444
@@ -62,6 +80,26 @@ INJ_EXCHANGE_GATEWAY_HTTP_GATEWAY_LISTEN_PORT=8810
 INJ_EXCHANGE_GATEWAY_GRPC_PORT_EXPOSED=9911
 INJ_EXCHANGE_GATEWAY_GRPC_PORT=9910
 
-# INJ Peggo 
+### Injective Exchange API ###
+INJ_EXCHANGE_API_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-exchange
+INJ_EXCHANGE_API_COMMAND=injective-exchange api
+INJ_EXCHANGE_API_CHRONOS_PORT=4444
+INJ_EXCHANGE_GRPC_LISTEN_PORT=9910
 
-INJ_ADDR=""
+### Injective Exchange Process ###
+INJ_EXCHANGE_PROCESS_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-exchange
+INJ_EXCHANGE_PROCESS_COMMAND=injective-exchange process
+
+### Injective Core env ###
+INJ_CORE_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-core
+
+### Injective Mongo env ###
+INJ_MONGO_DB_IMAGE_TAG=5.0.3
+INJ_MONGO_DB_PORT=27017
+
+### Ports ###
+INJ_NETWORK_P2P_PORT=26656
+INJ_NETWORK_GRPC_PORT=26657
+INJ_NETWORK_COSMOS_GRPC_PORT=9900
+INJ_NETWORK_COSMOS_GRPC_WEB_PORT=9091
+INJ_NETWORK_COSMOS_API_PORT=10337
