--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -81,8 +81,8 @@ services:
       EXCHANGE_SERVICE_WAIT_TIMEOUT: 1m
       APP_ENV: ${APP_ENV}
       APP_VERSION: fabd0d7
-      LOG_BUGSNAG_KEY: ""
-      LOG_BUGSNAG_ENABLED: "false"
+      LOG_BUGSNAG_KEY: ${INJ_EXHCHANGE_PROCESS_LOG_BUGSNAG_KEY}
+      LOG_BUGSNAG_ENABLED: ${INJ_EXHCHANGE_PROCESS_LOG_BUGSNAG_ENABLED}
       EXCHANGE_CHRONOS_BLOCK_OFFSET: 0
       EXCHANGE_CHRONOS_DATA_PATH: var/data
       EXCHANGE_CHRONOS_RPC_ADDR: tcp://injective-exchange-process:5500
@@ -94,10 +94,10 @@ services:
       EXCHANGE_COSMOS_CHAIN_ID: ${CHAIN_ID}
       EXCHANGE_ALCHEMY_ENDPOINT: ${ALCHEMY_ENDPOINT}
       EXCHANGE_STATSD_PREFIX: exchange-process
-      EXCHANGE_STATSD_ADDR: ""
+      EXCHANGE_STATSD_ADDR: ${INJ_EXCHANGE_PROCESS_STATSD_ADDR}
       EXCHANGE_STATSD_STUCK_DUR: 5m
       EXCHANGE_STATSD_MOCKING: "false"
-      EXCHANGE_STATSD_DISABLED: "true"
+      EXCHANGE_STATSD_DISABLED: ${INJ_EXCHANGE_PROCESS_STATSD_DISABLED}
     ports:
       - ${INJ_EXCHANGE_PROCESS_CHRONOS_RPC_PORT}:${INJ_EXCHANGE_PROCESS_CHRONOS_RPC_PORT}
     deploy:
@@ -152,13 +152,13 @@ services:
       EXCHANGE_HTTP_LISTEN_ADDR: 0.0.0.0:4444
       EXCHANGE_HTTP_TLS_CERT: /apps/data/public.crt
       EXCHANGE_HTTP_TLS_KEY: /apps/data/private.key
-      EXCHANGE_FEE_PAYER_PK: ""
+      EXCHANGE_FEE_PAYER_PK: ${INJ_EXCHANGE_API_FEE_PAYER_PK}
       EXCHANGE_ALCHEMY_ENDPOINT: ${ALCHEMY_ENDPOINT}
       EXCHANGE_STATSD_PREFIX: exchange-api
-      EXCHANGE_STATSD_ADDR: ""
+      EXCHANGE_STATSD_ADDR: ${INJ_EXCHANGE_API_STATSD_ADDR}
       EXCHANGE_STATSD_STUCK_DUR: 5m
       EXCHANGE_STATSD_MOCKING: "false"
-      EXCHANGE_STATSD_DISABLED: "true"
+      EXCHANGE_STATSD_DISABLED: ${INJ_EXCHANGE_API_STATSD_DISABLED}
     ports:
       - ${INJ_EXCHANGE_API_CHRONOS_PORT}:${INJ_EXCHANGE_API_CHRONOS_PORT}
       - ${INJ_EXCHANGE_GRPC_LISTEN_PORT}:${INJ_EXCHANGE_GRPC_LISTEN_PORT}
@@ -191,7 +191,7 @@ services:
       APP_ENV: ${APP_ENV}
       APP_VERSION: fabd0d7
       LOG_BUGSNAG_KEY: ""
-      LOG_BUGSNAG_ENABLED: "false"
+      LOG_BUGSNAG_ENABLED: ${INJ_EXCHANGE_GATEWAY_LOG_BUGSNAG_ENABLED}
       EXCHANGE_COSMOS_CHAIN_ID: ${CHAIN_ID}
       EXCHANGE_COSMOS_GRPC: tcp://injective-core:9900
       EXCHANGE_TENDERMINT_RPC: tcp://injective-core:26657
@@ -202,10 +202,10 @@ services:
       EXCHANGE_HTTP_TLS_CERT: /apps/data/public.crt
       EXCHANGE_HTTP_TLS_KEY: /apps/data/private.key
       EXCHANGE_STATSD_PREFIX: exchange-gateway
-      EXCHANGE_STATSD_ADDR: ""
+      EXCHANGE_STATSD_ADDR: ${INJ_EXCHNAGE_GATEWAY_EXCHANGE_STATSD_ADDR}
       EXCHANGE_STATSD_STUCK_DUR: 5m
       EXCHANGE_STATSD_MOCKING: "false"
-      EXCHANGE_STATSD_DISABLE: "true"
+      EXCHANGE_STATSD_DISABLE: ${INJ_EXCHANGE_GATEWAY_EXCHANGE_STATSD_DISABLE}
     command: ${INJ_EXCHANGE_GATEWAY_COMMAND}
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -233,20 +233,20 @@ services:
       APP_ENV: ${APP_ENV}
       APP_LOG_LEVEL: ${LOG_LEVEL}
       SERVICE_WAIT_TIMEOUT: 1m
-      PEGGY_COSMOS_PRIVKEY: ""
+      PEGGY_COSMOS_PRIVKEY: ${INJ_PEGGY_COSMOS_PRIVKEY}
       PEGGY_COSMOS_GRPC: tcp://localhost:9900
       PEGGY_TENDERMINT_RPC: http://localhost:26657
       PEGGY_FEE_DENOM: inj
       INJECTIVED_CHAIN_ID: ${CHAIN_ID}
       PEGGY_ETH_RPC:  http://localhost:8545
-      PEGGY_ETH_PRIVATE_KEY: ""
-      PEGGY_CONTRACT_ADDRESS: ""
-      INJ_CONTRACT_ADDRESS: ""
+      PEGGY_ETH_PRIVATE_KEY: ${INJ_PEGGO_PEGGY_ETH_PRIVATE_KEY}
+      PEGGY_CONTRACT_ADDRESS: ${INJ_PEGGY_CONTRACT_ADDRESS}
+      INJ_CONTRACT_ADDRESS: ${INJ_CONTRACT_ADDRESS}
       STATSD_PREFIX: peggo
-      STATSD_ADDR: ""
+      STATSD_ADDR: ${INJ_PEGGO_STATSD_ADDR}
       STATSD_STUCK_DUR: 5m
       STATSD_MOCKING: "false"
-      STATSD_DISABLED: "true"
+      STATSD_DISABLED: ${INJ_PEGGO_STATSD_DISABLED}
     networks:
       - injective
     volumes:
