Update guides and release versions
Signed-off-by: Nikola Marcetic <n.marcetic86@gmail.com>

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -94,7 +94,7 @@ INJ_EXCHANGE_PROCESS_COMMAND=injective-exchange process
 INJ_CORE_IMAGE_REPO=public.ecr.aws/l9h3g6c6/injective-core
 
 ### Injective Mongo env ###
-INJ_MONGO_DB_IMAGE_TAG=5.0.3
+INJ_MONGO_DB_IMAGE_TAG=latest
 INJ_MONGO_DB_PORT=27017
 
 ### Ports ###
