--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       TZ: America/New_York
       DEBIAN_FRONTEND: noninteractive
-      GIT_TESTNET_TAG: "v0.4.19-1642706097"
+      GIT_TESTNET_TAG: "v0.4.19-1656563866"
       GIT_MAINNET_TAG: "v1.4.0-1642928125"
       GIT_INJ_ORG: "https://github.com/InjectiveLabs"
       GIT_NETWORK_CONFIG: "mainnet-config"
@@ -18,7 +18,7 @@ services:
       GIT_API_LATEST_RELEASE: "https://api.github.com/repos/InjectiveLabs/injective-chain-releases/releases/latest"
       MAINNET_CONFIG: "mainnet-config"
       MAINNET_CONFIG_LATEST: "10001"
-      TESTNET_CONFIG_LATEST: "staking/40019"
+      TESTNET_CONFIG_LATEST: "corfu/70001"
       TESTNET_CONFIG: "testnet-config"
       VOLUMES_PATH: "/home/ubuntu/volumes"
       SYNC_CORE_SNAPSHOT: "true"
