chore: separate testnet and mainnet releases

--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -13,9 +13,11 @@ services:
       GIT_MAINNET_TAG: "v1.4.0-1642928125"
       GIT_INJ_ORG: "https://github.com/InjectiveLabs"
       GIT_NETWORK_CONFIG: "mainnet-config"
-      GIT_RELEASE_REPO: "https://github.com/InjectiveLabs/injective-chain-releases/releases/download"
+      GIT_RELEASE_REPO_MAINNET: "https://github.com/InjectiveLabs/injective-chain-releases/releases/download"
+      GIT_RELEASE_REPO_TESTNET: "https://github.com/InjectiveLabs/testnet/releases/download"
       RELEASE_ARCH: "linux-amd64.zip"
-      GIT_API_LATEST_RELEASE: "https://api.github.com/repos/InjectiveLabs/injective-chain-releases/releases/latest"
+      GIT_API_LATEST_RELEASE_MAINNET: "https://api.github.com/repos/InjectiveLabs/injective-chain-releases/releases/latest"
+      GIT_API_LATEST_RELEASE_TESTNET: "https://api.github.com/repos/InjectiveLabs/testnet/releases/latest"
       MAINNET_CONFIG: "mainnet-config"
       MAINNET_CONFIG_LATEST: "10001"
       TESTNET_CONFIG_LATEST: "corfu/70001"
