chore: remove unused vars

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -14,7 +14,7 @@ NETWORK=mainnet
 LOG_LEVEL="info"
 PASSPHRASE=""
 
-# Injective image tag, options are latest, local, prod
+# Injective image tag, options are local, staging, prod
 INJ_IMAGE_TAG=prod
 
 # Injective Core env #
@@ -54,13 +54,6 @@ INJ_EXCHANGE_API_RESOURCE_RAM_RESERVED=4G
 INJ_EXCHANGE_GATEWAY_LOG_BUGSNAG_ENABLED="false"
 INJ_EXCHANGE_GATEWAY_EXCHANGE_STATSD_DISABLE="true"
 INJ_EXCHNAGE_GATEWAY_EXCHANGE_STATSD_ADDR=""
-
-# INJ Peggo 
-# Required
-INJ_PEGGO_PEGGY_ETH_PRIVATE_KEY=""
-INJ_PEGGY_COSMOS_PRIVKEY=""
-INJ_PEGGY_CONTRACT_ADDRESS=""
-INJ_CONTRACT_ADDRESS=""
 
 # Optional
 INJ_ADDR=""
