refactor: update environment vars

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -14,7 +14,7 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Logging Env #
-LOG_LEVEL="debug"
+LOG_LEVEL="info"
 LOG_BUGSNAG_KEY=
 LOG_BUGSNAG_ENABLED=false
 
