--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -20,7 +20,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=cms-fix
+INJ_CORE_IMAGE_VERSION=1.7.1
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=8G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=4G
