--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -2,8 +2,9 @@
 # User Configurable section.
 # Each service contains required and optional varialbes, please make sure you populate all required.
 
-#####################
-### User Configurable ###
+###############################
+### Start User Configurable ###
+###############################
 
 # Network Env #
 MONIKER=injective
@@ -35,16 +36,8 @@ GIT_TESTNET_TAG: "v0.4.19-1661549677"
 GIT_MAINNET_TAG: "v1.7.0-1665417543"
 
 # Indexer Env #
-INDEXER_TENDERMINT_RPC=tcp://host.docker.internal:26657
-INDEXER_COSMOS_GRPC=tcp://host.docker.internal:9900
 INDEXER_GAS_ADJUSTMENT_COEF=1.5
 INDEXER_BLOCK_FETCH_JOBS=2
-
-# Indexer Connections #
-INDEXER_DB_MONGO_DBNAME=exchangeV2
-INDEXER_DB_MONGO_CONNECTION=mongodb://mongo:27017/?replicaSet=rs0 &
-connect=direct
-INDEXER_DB_EVENTPROVIDER_ENDPOINT=k8s.mainnet.events.grpc-web.injective.network
 
 INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS=true
 
@@ -69,3 +62,16 @@ INDEXER_CHRONOS_PROCESS_MEMORY_LIMIT=8G
 INDEXER_CHRONOS_API_MEMORY_LIMIT=4G
 INDEXER_EXCHANGE_PROCESS_MEMORY_LIMIT=8G
 INDEXER_EXCHANGE_API_MEMORY_LIMIT=4G
+
+#############################
+### END User Configurable ###
+#############################
+
+# Do not edit from this point
+
+# Indexer Connections #
+INDEXER_DB_MONGO_DBNAME=exchangeV2
+INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct"
+INDEXER_DB_EVENTPROVIDER_ENDPOINT=k8s.mainnet.events.grpc-web.injective.network
+INDEXER_TENDERMINT_RPC=tcp://host.docker.internal:26657
+INDEXER_COSMOS_GRPC=tcp://host.docker.internal:9900
