chore: add chain height variable

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -10,7 +10,7 @@
 MONIKER=injective
 CHAIN_ID=injective-888
 APP_ENV=staging
-APP_VERSION=v1.7.1
+APP_VERSION=v1.7.2
 NETWORK=testnet
 PASSPHRASE=""
 
@@ -38,6 +38,7 @@ GIT_MAINNET_TAG: "v1.7.0-1665417543"
 # Indexer Env #
 INDEXER_GAS_ADJUSTMENT_COEF=1.5
 INDEXER_BLOCK_FETCH_JOBS=2
+INDEXER_CHAIN_START_HEIGHT=0
 
 INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS=true
 
@@ -46,12 +47,17 @@ EXCHANGE_FEE_PAYER_PK=
 HOSTNAME=
 ASSET_SERVICE_URL=https://k8s.testnet.asset.injective.network
 
+# Indexer Exchange env #
+INDEXER_DB_MIGRATION_VERSION=
+INDEXER_DB_MIGRATION_HEIGHT=
+INDEXER_DB_PAUSE_HEIGHT=
+
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=
 INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS=
 INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES=
 
-# Indexer StatsD env #
+# Indexer Global StatsD env #
 INDEXER_STATSD_AGENT=datadog
 INDEXER_STATSD_PREFIX=indexer-chronos-process
 INDEXER_STATSD_MOCKING="false"
