chore: point to local eventprovider service

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -38,7 +38,7 @@ GIT_MAINNET_TAG: "v1.7.0-1665417543"
 # Indexer Env #
 INDEXER_GAS_ADJUSTMENT_COEF=1.5
 INDEXER_BLOCK_FETCH_JOBS=2
-INDEXER_CHAIN_START_HEIGHT=0
+INDEXER_CHAIN_START_HEIGHT=2533984
 
 INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS=true
 
@@ -78,6 +78,6 @@ INDEXER_EXCHANGE_API_MEMORY_LIMIT=4G
 # Indexer Connections #
 INDEXER_DB_MONGO_DBNAME=exchangeV2
 INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct"
-INDEXER_DB_EVENTPROVIDER_ENDPOINT=k8s.mainnet.events.grpc-web.injective.network
+INDEXER_DB_EVENTPROVIDER_ENDPOINT=indexer-eventprovider-api:4444
 INDEXER_TENDERMINT_RPC=tcp://host.docker.internal:26657
 INDEXER_COSMOS_GRPC=tcp://host.docker.internal:9900
